--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: '^0.17.0'
+  intl: ^0.20.2
   sudoku_dart: '^1.1.0'
   logger: "^1.1.0"
   sprintf: "^7.0.0"
