fix: change licences

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,10 +86,10 @@ android {
                 signingConfig signingConfigs.release
             }
 
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
 
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     kotlinOptions {
